# kinesis-tools-rust

./: .editorconfig  .gitignore  Cargo.toml  Makefile  readme.md
.github/workflows/: check.yml  release.yml
src/: client.rs  create_stream.rs  delete_stream.rs  list_streams.rs  main.rs  put_record.rs  read_stream.rs
tests/: base64-encoded.json  base64_encode.php  gzcompress.php  gzipped-text.json  inline-payload  text-base64encoded.json  text.json  valid-payload
