[package]
name = "ktr"
version = "0.0.4"
edition = "2021"
description = "KTR (Kinesis Tools Rust) allows you to interact with AWS Kinesis data streams"
repository = "https://github.com/Keenegan/kinesis-tools-rust"

[dependencies]
aws-config = { default-features = false, features = ["rustls"], version = "0.55.0" }
aws-sdk-kinesis = { default-features = false, version = "0.26.0" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], default-features = false }
base64 = { version = "0.21.0", features = ["std"], default-features = false }
flate2 = "1.0.25"
clap = { version = "4.1.4", features = ["derive"] }
serde_json = { version = "1.0.95", features = ["preserve_order"], default-features = false }
chrono = { version = "0.4.24", default-features = false, features = ["alloc", "std"]}
